# miscellaneous

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md  cache.h  cache_test.cpp  dynamic_template.cpp  hp_4510s_fan_control.cpp  meson.build  pi.cpp  plplot_playground.cpp  trees_and_heaps.h  update_dir.cpp  utils.h
